blockml/test/errors/12_chart/e197/e197d.dashboard
dashboard: e197d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e197m
  type: 'gauge_linear'
  data:
    value_field: a.dim1
  options:
    start_angle: unk        


